# pygae

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: Architecture.md  EventSystem.md  GameEngine.md  GameObject.md  InputService.md  SceneManager.md
examples/: ball-in-box.py  box-in-ball.py  snake.py
src/pygae/: __init__.py  engine.py  event.py  game_object.py  helper_mixin.py  typing.py
src/pygae/core/: __init__.py  engine.py  event.py  game_object.py  helper_mixin.py  types.py
src/pygae/input/: __init__.py  types.py
src/pygae/math/: __init__.py  vec2.py
src/pygae/messaging/: __init__.py  types.py
src/pygae/service/: input_service.py  message_bus.py  scene_manager.py
src/pygae/value_object/: __init__.py  input_binding.py
tests/: conftest.py  fakes.py
tests/pygae/game_object/: conftest.py  test_game_object_events.py  test_gameobject_services.py  test_get_children.py  test_kill_lifecycle.py  test_spawn_lifecycle.py  test_subscription.py  test_update_lifecycle.py
tests/pygae/math/: test_vec2.py
tests/pygae/services/input_service/: conftest.py  test_enable_disable_actions.py  test_input_axies.py  test_input_buttons.py  test_set_bindings.py
tests/pygae/services/message_bus/: conftest.py  test_subscribe.py  test_unsubscribe.py  test_update.py
tests/pygae/services/scene_manager/: test_advanced_scene_mangement.py  test_scene_events.py  test_scene_management_lifecycle.py
